--- a/_posts/2000-04-03-settings.md
+++ b/_posts/2000-04-03-settings.md
@@ -1,10 +1,10 @@
 ---
-title: Setting
+title: Email Tracking Setting
 section: Email Tracking
-index: 3
+index: 4
 ---
 
-Email tracking settings are managed in [Chrome Extension](chrome://extensions/) [Option Page](chrome-extension://ldikiokclnbceabnlbkabmcacpiednop/option-page.html). There is also a link to option page in bottom of sidebar panel.
+Visit to Email Tracking setting in the sidebar.
 
 ## Default email tracking setting
 
