--- a/_posts/2000-02-07-social.md
+++ b/_posts/2000-02-07-social.md
@@ -1,7 +1,7 @@
 ---
 title: Social Info
-section: Inbound Messages
-index: 3
+section: User Guide
+index: 5
 ---
 
 We support over 50 social networks data including Twitter, Facebook, LinkedIn and Google Plus.
