--- a/_posts/2000-06-02-overview.md
+++ b/_posts/2000-06-02-overview.md
@@ -1,27 +1,13 @@
 ---
-title: Setup
-section: Setup
+title: Overview
+section: Tutorials
 index: 1
 ---
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/es3UCAXU19I" frameborder="0" allowfullscreen></iframe>
-
-## Install
+<iframe width="560" height="315" src="https://www.youtube.com/embed/8nIw6KVEVII" frameborder="0" allowfullscreen></iframe>
 
 
-Install Yathit InboxCRM for SugarCRM by clicking the following button:
-
-<div class="centered">
-    <a id="install-sugarcrm" class="button--primary themed">Add to Chrome</a>
-</div>
-
-This will prompt permission grant dialog as follow:
-
-{% include full-screenshot.html file="add-to-chrome.gif" %}
-
-Click "Add" to grant permission and install the extension.
-
-Then visit to [Gmail](https://mail.google.com), you should see Yathit InboxCRM sidebar panel tab appear on right side of Gmail website. Click the button for setting up account.
+After [installation](install.html), visit to [Gmail](https://mail.google.com), you should see Yathit InboxCRM sidebar panel tab appear on right side of Gmail website. Click the button for setting up account.
 
 You can find installed extensions in [Chrome Extension Page](chrome://extensions/) ([screenshoot]({{ 'chrome-extensions-page.tiff' | asset_path }})). Extension page is used to uninstall the extension, force updating, view given permissions and visit to extension option page. For developer, there is a link to view browser console to debug extension background page.
 
