--- a/_posts/2000-04-01-install.md
+++ b/_posts/2000-04-01-install.md
@@ -6,10 +6,8 @@ index: 1
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/es3UCAXU19I" frameborder="0" allowfullscreen></iframe>
 
-Yathit is a web browser extension and supports both [Google Chrome](https://chrome.google.com/webstore/detail/yathit-sugarcrm-for-gmail/iccdnijlhdogaccaiafdpjmbakdcdakk) and [Opera](https://addons.opera.com/en/extensions/details/yathit-sugarcrm-for-gmail/) desktop browsers. and will support Mozilla Firefox in the near future.
+Yathit is a web browser extension and supports [Google Chrome](https://chrome.google.com/webstore/detail/yathit-sugarcrm-for-gmail/iccdnijlhdogaccaiafdpjmbakdcdakk) and [Opera](https://addons.opera.com/en/extensions/details/yathit-sugarcrm-for-gmail/) desktop browsers and experimental support for [Mozilla Firefox](https://addons.mozilla.org/en-US/firefox/addon/yathit-sugarcrm-for-gmail/).
 
-
-## Installation
 
 This installation guide is for Chrome browser. Firefox and Opera browser has similar setup steps. 
 
@@ -25,21 +23,9 @@ Please follow the below steps to install Yathit InboxCRM for SugarCRM:
 
 {% include full-screenshot.html file="add-to-chrome.gif" %}
 
-Click "Add" to grant permission and install the extension.
+❸ Click "Add" to grant permission and install the extension.
 
-❸ Open your [Gmail](https://mail.google.com)account, then you should see Yathit InboxCRM sidebar panel tab on right side of Gmail website. Click on the button to setup SugarCRM account:
+❹ Open your [Gmail](https://mail.google.com) account, then you should see Yathit InboxCRM sidebar panel tab on right side of Gmail website. 
 
-Screenshot is required
-
-
-## Yathih CRM in Chrome Extensions page:
- ([screenshoot]({{ 'chrome-extensions-page.tiff' | asset_path }})). 
-
-* Extension page is used to uninstall, force updating , view the granted permissions for the extension and visit extension option page.
- 
-* For developer, they can view the browser console to debug extension background page.
-
-* Extension has a background page. It runs only when [Gmail](https://mail.google.com) is opened in the browser or SugarCRM website. 
-
-* The background page injects Yathit sidebar and context panel using extension [content script](https://developer.chrome.com/extensions/content_scripts) technique.
+See also [updating](https://www.yathit.com/kb/5469388304023552-updating) and [uninstall](https://www.yathit.com/kb/6418200535236608-uninstalling) Yathit chrome extension.
 
