--- a/_posts/2000-04-01-setup.md
+++ b/_posts/2000-04-01-setup.md
@@ -4,16 +4,18 @@ section: Installation Guide
 index: 1
 ---
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/es3UCAXU19I#t=1m6s" frameborder="0" allowfullscreen></iframe>
 
-❶ Click on the setup link in the extension sidebar home panel, or in Setting > Sugar -Setting panel to bring up Sugar login form:
+❶  Go to the extension sidebar _Setting_ panel, {{ "settings" | svg_icon }}, and then _Sugar Setting_ panel. Click on the setup link, to bring up Sugar login form:
 
 {% include full-screenshot.html file="sugarcrm-login.gif" %}
 
-❷ Use SugarCRM website URL, username and password to grant the host the required access to your SugarCRM domain. 
+❷ Type tab to go next. Click **Allow** to accept the requested permissions, if you have not grant it before.
 
-❸ Click **Allow** to accept the requested permissions. Your SugarCRM account credentials will be used by SugarCRM server only.
+❸ If you are using Single-Sign-On (SSO) (also called LDAP login), select Authentication selection to SSO.
 
-❹ Your SugarCRM username and password are saved in the browser.
+❹ Use SugarCRM website URL, username and password to grant the host the required access to your SugarCRM domain. Your SugarCRM account credentials are saved in the browser and be used by SugarCRM server only.
 
-❺ The extension will download your SugarCRM meta data and it will take a while to complete loading initial data.
+The extension will download your SugarCRM meta data and it will take a while to complete loading initial data.
 
+Yathit support SugarCRM versions from 4.5 to the latest version. All editions of SugarCRM, including community edition, are supported. Sugar variance such as SuiteCRM, 1CRM, vTiger, etc are also supported. 
