--- a/_posts/2000-04-02-login.md
+++ b/_posts/2000-04-02-login.md
@@ -5,27 +5,37 @@ index: 1
 ---
 
 
-* Login to Yathit server is optional, but to persist setting and additional feature for licensing, you should log in to Yathit server. 
-You can either '[Sign in to Chrome](https://support.google.com/chrome/answer/185277)' or Login to Yathit server as below:
+Yathit browser extension works even without login to Yathit server, however to persist setting and additional features for licensing, you should log in to Yathit server. 
 
-* Click the Login button on the extension panel:
+In the Yathit sidebar, go to about page, {{ "ydn-logo-bw" | svg_icon }}. If you are not login, you should see "Login to Yathit server" link, as shown below.
+
+{{ "about-page-login-link.png" | screenshot }}
+
+Similarly, you can login in Yathit sidebar home page, {{ "home" | svg_icon }}. The button can be hided using setting however.  
+
+{{ "sidebar-login-button.png" | screenshot }}
 
 
-{% include full-screenshot.html file="sigin-to-chrome.gif" %}
+Click the Login button to begin.
 
-* If your Chrome profile, i.e, the Google account login to the extension, is different from the Gmail you want to use, [switch Chrome profile](https://support.google.com/chrome/answer/2364824) that you want to use. Briefly, to switch Chrome profile, click you profile name on the top right of the Chrome browser, to show menu and then select another account or click Manage account. It will let you to add your chosen Gmail account.
-
-* To login with Chrome sign in, click the Login button while holding SHIFT key:
 
 {% include full-screenshot.html file="login-to-yathit.gif" %}
 
 
-### Using Extension in multiple Gmail accounts
+## Using Extension in multiple Gmail accounts
 
-* By default only one Gmail account will use Extension. 
-
-* On other Gmail session, the extension will be hidden on side. 
-
-* If you want to use all Gmail accounts, you can do so by setup the related configuration in General Preference Setting page:
+By default only one Gmail account will use Extension. On other Gmail session, the extension will be hidden on side. If you want to use all Gmail accounts, you can do so by setup the related configuration in General Preference Setting page:
 
 {% include full-screenshot.html file="enable-all-gmail-sessions.gif" %}
+
+## Sign-in with Chrome Profile
+
+If your Chrome profile, i.e, the Google account login to the extension, is different from the Gmail you want to use, [switch Chrome profile](https://support.google.com/chrome/answer/2364824) that you want to use. Briefly, to switch Chrome profile, click you profile name on the top right of the Chrome browser, to show menu and then select another account or click Manage account. It will let you to add your chosen Gmail account.
+
+To login with [Sign in to Chrome](https://support.google.com/chrome/answer/185277), click the Login button while holding SHIFT key. 
+
+<details>
+<summary>Login screencast</summary>
+{% include full-screenshot.html file="sigin-to-chrome.gif" %}
+</details>
+
