--- a/_posts/2000-04-02-login.md
+++ b/_posts/2000-04-02-login.md
@@ -30,12 +30,9 @@ By default only one Gmail account will use Extension. On other Gmail session, th
 
 ## Sign-in with Chrome Profile
 
-If your Chrome profile, i.e, the Google account login to the extension, is different from the Gmail you want to use, [switch Chrome profile](https://support.google.com/chrome/answer/2364824) that you want to use. Briefly, to switch Chrome profile, click you profile name on the top right of the Chrome browser, to show menu and then select another account or click Manage account. It will let you to add your chosen Gmail account.
+Instead of login to Yathit server, you can also login with Chrome, a build-in browser authentication system. You can view your chrome profile on the top right corner of Chrome browser. Also note that it is different from Gmail account, although you use same username and password to authenticate Chrome browser. When using Chrome Profile login, access token for Google account, which is required for syncing Contact or Calendar, are not stored in Yathit server.  
 
 To login with [Sign in to Chrome](https://support.google.com/chrome/answer/185277), click the Login button while holding SHIFT key. 
 
-<details>
-<summary>Login screencast</summary>
-{% include full-screenshot.html file="sigin-to-chrome.gif" %}
-</details>
+If your Chrome profile, i.e, the Google account login to the extension, is different from the Gmail you want to use, [switch Chrome profile](https://support.google.com/chrome/answer/2364824) that you want to use. Briefly, to switch Chrome profile, click you profile name on the top right of the Chrome browser, to show menu and then select another account or click Manage account. It will let you to add your chosen Gmail account.
 
