--- a/_posts/2000-03-07-social.md
+++ b/_posts/2000-03-07-social.md
@@ -1,5 +1,5 @@
 ---
-title: Link to Social Networks
+title: Social Info
 section: User Guide
 index: 8
 ---
@@ -7,49 +7,26 @@ index: 8
 {{ site.product }} supports over 50 social networks data including Twitter, Facebook, LinkedIn and Google Plus.
 
 
-## How to view social network profiles
+### How to view social network profiles
 
+Social info are not enabled by default. To enable it, go to Setting panel, {{ "settings" | svg_icon }}, and select **Social Info** panel. In the Social Info panel, check enable. Note that the target email address will be sent to third-party to query social network information.
 
 {% include side-image.html file="social-networks-view.gif" %}
-* At the right side of the email message there is a context panel shows social network information of the contact. 
 
-* Social network icons will be displayed if the user of the contact is belongs to particular social networks. 
-
-* The icons of the main four social networks, Twitter, Facebook, LinkedIn and Google Plus, will always be displayed.
-
-* The color of the social network icon will be changed to black if the contact doesn't belong to it.
-
-* Social network information will be displayed over the icon on mouse hover.
-
-* The social network information includes:
-
-### ❶ Personal Profiles:
-
-* Displayed at the top of the hover panel. 
-
-* If the profile photo is available in the network, it will be displayed on the left side. 
-
-* To visit the personal social network page, click on the top link. 
-
-* Additional information of the social network are displayed below including location, if available.
-
-### ❷ Activity Feed:
-
-* Activity feeds are displayed below the personal profile section. 
-
-* Recent user tweets also listed in the activity feeds.
+At the right side of the email message there is a context panel shows social network information of the contact. Social network icons will be displayed if the user of the contact is belongs to particular social networks. The icons of the main four social networks, Twitter, Facebook, LinkedIn and Google Plus, will always be displayed. The color of the social network icon will be changed to black if the contact doesn't belong to it. Social network information will be displayed over the icon on mouse hover.
 
 
-## Permission and authenticating to social networks
+### Personal Profiles
 
-* By default, the public available information are shown, unless you have granted additional permissions to the extension.
+Personal profile is displayed at the top of the hover panel. If the profile photo is available in the network, it will be displayed on the left side. To visit the personal social network page, click on the top link. Additional information of the social network are displayed below including location, if available.
 
-* In general, two kinds of permissions are required. 
+### Activity Feed:
 
-* Host access permission: used to achieve the directly request to social network site.
+Activity feeds are displayed below the personal profile section. Recent user tweets also listed in the activity feeds.
 
-* Additional oauth token is required to perform on the network on your behalf. 
 
-* The Yellow icon color indicates that your action is required. Click on the icon to begin the authorization process.
+### Permission and authenticating to social networks
+
+By default, the public available information are shown, unless you have granted additional permissions to the extension. In general, two kinds of permissions are required. Host access permission: used to achieve the directly request to social network site. Additional oauth token is required to perform on the network on your behalf. The Yellow icon color indicates that your action is required. Click on the icon to begin the authorization process.
 
 {% include full-screenshot.html file="social-networks-grant-host-permission.gif" %}
