--- a/_posts/2000-04-01-install.md
+++ b/_posts/2000-04-01-install.md
@@ -9,6 +9,7 @@ index: 1
 Yathit is a web browser extension and supports [Google Chrome](https://chrome.google.com/webstore/detail/yathit-sugarcrm-for-gmail/iccdnijlhdogaccaiafdpjmbakdcdakk) and [Opera](https://addons.opera.com/en/extensions/details/yathit-sugarcrm-for-gmail/) desktop browsers and experimental support for [Mozilla Firefox](https://addons.mozilla.org/en-US/firefox/addon/yathit-sugarcrm-for-gmail/).
 
 
+"Yathit: SugarCRM for Gmail" Web Extension can be installed from respective browser app stores in the above links.
 This installation guide is for Chrome browser. Firefox and Opera browser has similar setup steps. 
 
 Please follow the below steps to install Yathit InboxCRM for SugarCRM:
