--- a/_posts/2001-03-01-overview.md
+++ b/_posts/2001-03-01-overview.md
@@ -25,7 +25,7 @@ If you are Chrome profile, i.e, the Google account login to the extension, is di
 
 To login with Chrome sign in, click the Login button while holding SHIFT key.
 
-{% include full-screenshot.html file="login-to-yathit.gif" %}
+{{ "login-to-yathit.gif" | screenshot }}
 
 ### Using Extension in multiple Gmail accounts
 
