partnet add for rh

--- a/_posts/2000-07-04-partner.md
+++ b/_posts/2000-07-04-partner.md
@@ -49,9 +49,12 @@ Tel: +66662-863-6038<br>
 Mail: presales@signify.co.th<br>
 Web: [http://www.signify.co.th/](http://www.signify.co.th/)
 
+### Rolustech
 
+Rolustech is an official SugarCRM and Salesforce Partner firm with offices in the UK, USA and Pakistan. Our team of over 150 experienced resources has rendered services to more than 700+ satisfied clients globally. We use lean and agile development methodologies to build optimal CRM systems for our valued clients including SugarCRM Partners, Salesforce Partners, and Enterprise Customers. Our team helps businesses with CRM Customization, Integration, Deployment, Maintenance and Support.
 
-
-
+Tel: US +1-310-492-5564  <br>
+Mail: info@rolustech.com<br>
+Web: [https://www.rolustech.com](https://www.rolustech.com)
 
 
