add lion solution

--- a/_posts/2000-07-04-partner.md
+++ b/_posts/2000-07-04-partner.md
@@ -57,4 +57,17 @@ Tel: US +1-310-492-5564  <br>
 Mail: info@rolustech.com<br>
 Web: [https://www.rolustech.com](https://www.rolustech.com)
 
+### Lion Solution 
+
+Lion Solution develops bespoke SuiteCRM software solutions in Italy to help enterprises of all sizes to attract and retain customers. 
+Lion Solution successfully implemented solutions to manage: defence against brute-force attacks, geolocation, integrations with Asterisk PBX and Alfresco and also with proprietary systems like Zucchetti.
+
+Lion Solution SRLS <br>
+Via della Provvidenza, 37 - 35030 Rubano (PD) <br>
+
+Tel: 049 2701257 <br>
+Mail: com@lionsolution.it <br>
+Web: [https://www.lionsolution.it/](https://www.lionsolution.it/)
+
+
 
